--- a/mod/tmx/static/res/style.scss
+++ b/mod/tmx/static/res/style.scss
@@ -3,6 +3,9 @@
  * Licensed under CC BY-NC-SA    *
  * * * * * * * * * * * * * * * * *
 */
+
+@import "_basic.scss", "debug.scss";
+
 // Colors
 $c_font: #D5D9D1;
 $c_font_imp: #FFFFFF;
@@ -17,80 +20,19 @@ $c_lgrey: #888a85 + #222;
 $c_dgrey: lighten($c_bg, 15%);
 $c_ddgrey: darken($c_bg, 2%);
 
-// Distances
-$dv: .5em; //common divisor
-//$em: (1 / 16) + 0em; // unit conversion
-
-// Fonts
-$font_mono: 'Ubuntu Mono', 'Courier New', 'Courier', monospace;
-$font_main: 'Trebuchet MS', Arial, sans-serif;
-$font_title: 'Ubuntu Light', $font_main;
-
-// Various
-@mixin mrg($dmul: 1.0, $lmul: 0.0) {
-	margin: 0 0 ($dmul * $dv) ($lmul * $dv);
-}
 $border_logo: 2px groove lighten($c_bg, 5%);
 
-
-// General setup, commons
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-}
 body {
 	background: $c_bg;
 	color: $c_font;
 	font-family: $font_main;
 	font-size: .80em;
 }
-html, body, img {
-	margin: 0;
-	padding: 0;
-	border: none;
-}
-a {
-	text-decoration: none;
-	color: inherit;
-}
-.clear {clear: both; visibility: hidden;}
-.center {text-align: center;}
-.white {color: $c_font_imp;}
-.fright {float:right;}
 
-// xdebug overrides
-pre.xdebug-var-dump {
-	b {
-		color:white;
-	}
-	font {
-		&[color="#3465a4"], &[color="#75507b"] {
-			color: #fce94f;
-		}
-		&[color="#4e9a06"], &[color="#f57900"] {
-			color: #4FCC00;
-		}
-		&[color="#f57900"]:after {
-			content: 'f';
-		}
-		&[color="#cc0000"] {
-			color: #559fdc;
-		}
-	}
-}
-table.xdebug-error {
-	color: black !important;
-}
+.white	{color: $c_font_imp;}
+.blueish	{color: $c_blueish !important;}
+.blue		{color: $c_blue !important;}
 
-// Content settings
-.cnt-set {
-	margin: 0 auto;
-	width: 70%;
-	min-width: 400px;
-	display: block;
-}
 
 // Logo/header
 #logo {
@@ -102,7 +44,7 @@ table.xdebug-error {
 	font-size: 2.3em;
 
 	a {
-		font-family: $font_title;
+		font-family: 'Ubuntu Light', $font_main;
 		font-weight: lighter;
 
 		.blue {
@@ -124,11 +66,16 @@ table.xdebug-error {
 	font-size: .9em;
 	font-family: $font_mono;
 	color: $c_lgrey;
-	position: fixed;
+	//position: relative;
 	background: $c_bg;
-	padding: $dv/2;
-	right: 0;
-	bottom: 0;
+	margin: 0 .25em .25em;
+	height: 1em;
+	text-align: right;
+}
+#page-wrap {
+	min-height: 100%;
+	margin-bottom: -1.25em;
+	padding-bottom: 1.5em;
 }
 
 // Top-level menu
@@ -156,6 +103,10 @@ table.xdebug-error {
 			padding-left: $dv;
 			padding-right: $dv;
 			margin: 0 0 0 $dv/2;
+
+		}
+		small {
+			font-size: .75em;
 		}
 	}
 	.wrap {
@@ -217,12 +168,8 @@ div.rpanel {
 	line-height: 1.85;
 	overflow: auto;
 
-	p, blockquote, pre {
-		text-align: justify;
-		margin: 0 0 1em;
-	}
+
 	a {
-		display: inline;
 		color: $c_blueish;
 
 		&:hover {
@@ -262,9 +209,6 @@ div.rpanel {
 			display: block;
 			padding: 0 0 1em;
 
-			&:parent {
-				background: red;
-			}
 			&:after {
 				content: attr(rel);
 				position: absolute;
@@ -289,51 +233,11 @@ div.rpanel {
 		cursor: help;
 		border-bottom: 1px dotted $c_blueish;
 	}
-
 	h1, h2, h3, h4, h5 {
 		color: $c_font_imp;
-		display: block;
-		font-weight: bold;
-		margin: .5em 0 0 0;
-	}
-	h1 {font-size: 2em;}
-	h2 {font-size: 1.5em;}
-	h3 {font-size: 1.17em;}
-
-	ol, ul {
-		display: block;
-		@include mrg(2);
-		padding: 0 0 0 2em;
-		li {
-			display: list-item;
-		}
 	}
 
-	.img {
-		img {}
-		.desc {}
-	}
-
-	form {
-		@include mrg(1,3);
-		line-height: 1.9em;
-	}
-	.button, a.button {
-		cursor: pointer;
-		text-decoration: none;
-		display: inline-block;
-	}
-	a.button:hover {
-		border-bottom: none;
-	}
-
-	input[type=text], input[type=file], input[type=password], input[type=submit],
-		input[type=search], input[type=email], textarea, .button {
-		// -moz-transition: all 0.3s ease-in-out;
-		// -o-transition: all 0.3s ease-in-out;
-		// -webkit-transition: all 0.3s ease-in-out;
-		// transition: all 0.3s ease-in-out;
-		// outline: none;
+	input, textarea, .button {
 		margin: $dv $dv 0 $dv;
 		font: inherit;
 		color: $c_font;
@@ -341,39 +245,16 @@ div.rpanel {
 		background: darken($c_bg, 4%);
 		border-radius: 4px;
 		padding: .1em .3em;
+		max-width: 95%;
 
-		// &:focus {
-		// 	-moz-box-shadow: 0 0 2px #51cbee;
-		// 	-webkit-box-shadow: 0 0 2px #51cbee;
-		// 	box-shadow: 0 0 2px #51cbee;
-		// 	// padding: 3px 0px 3px 3px;
-		// 	// margin: 5px 1px 3px 0px;
-		// 	border: 1px solid #51cbee;
-		// }
-	}
-	input[type=radio], input[type=checkbox] {
-		margin: 1px 3px 0 6px;
+		//TODO: custom focus color
 	}
 	input[type=submit], .button {
 		width: auto;
 		$bstyle: 2px solid $c_lgrey;
 		border-left: $bstyle;
 		border-right: $bstyle;
-	}
-
-	.form-label, label {
-		display: block;
-		margin-bottom: $dv;
-	}
-
-	textarea.big {
-		height: 30*$dv;
-	}
-	input.big, .button.big {
-		font-size: 1.3em;
-	}
-	input.wide, textarea.wide, .buttton.big {
-		width: 75%;
+		padding: $dv/3 $dv*1.5;
 	}
 
 
@@ -403,10 +284,6 @@ div.rpanel {
 				margin: 0;
 			}
 		}
-	}
-
-	table, tr, td, thead, tbody {
-		border: none;
 	}
 
 	.tmx_about {
