--- a/mod/tmx/static/res/_basic.scss
+++ b/mod/tmx/static/res/_basic.scss
@@ -17,6 +17,7 @@ $font_main: 'Trebuchet MS', Arial, sans-serif;
 	box-sizing: border-box;
 }
 html, body {
+	-webkit-font-smoothing: antialiased;
 	min-height: 100%;
 	height: 100%;
 }
