crud, blog, fields

--- a/mod/tmx/static/res/style.scss
+++ b/mod/tmx/static/res/style.scss
@@ -32,7 +32,8 @@ body {
 .white	{color: $c_font_imp;}
 .blueish	{color: $c_blueish !important;}
 .blue		{color: $c_blue !important;}
-
+.green	{color: #8ae234 !important;}
+.red		{color: #ef2929 !important;}
 
 // Logo/header
 #logo {
